fix: alignment and uage in assets

--- a/packages/raystack/v1/components/link/link.module.css
+++ b/packages/raystack/v1/components/link/link.module.css
@@ -3,7 +3,8 @@
   line-height: 1;
   cursor: pointer;
   margin: 0;
-  display: block;
+  display: inline-flex;
+  align-items: center;
   transition: opacity 0.2s ease;
 }
 
