--- a/packages/raystack/v1/components/text/text.module.css
+++ b/packages/raystack/v1/components/text/text.module.css
@@ -1,5 +1,6 @@
 .text {
-  display: block;
+  display: inline-flex;
+  align-items: center;
   line-height: 1;
   margin: 0;
   color: var(--rs-color-text-base-primary);
